--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     buildToolsVersion "25.0.1"
 
     defaultConfig {
-        applicationId "com.reactnativestarter"
+        applicationId "com.itemalert"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
