--- a/ios/ItemAlert.xcodeproj/xcshareddata/xcschemes/ItemAlert.xcscheme
+++ b/ios/ItemAlert.xcodeproj/xcshareddata/xcschemes/ItemAlert.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ReactNativeStarter.app"
-               BlueprintName = "ReactNativeStarter"
-               ReferencedContainer = "container:ReactNativeStarter.xcodeproj">
+               BuildableName = "ItemAlert.app"
+               BlueprintName = "ItemAlert"
+               ReferencedContainer = "container:ItemAlert.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ReactNativeStarterTests.xctest"
-               BlueprintName = "ReactNativeStarterTests"
-               ReferencedContainer = "container:ReactNativeStarter.xcodeproj">
+               BuildableName = "ItemAlertTests.xctest"
+               BlueprintName = "ItemAlertTests"
+               ReferencedContainer = "container:ItemAlert.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ReactNativeStarterTests.xctest"
-               BlueprintName = "ReactNativeStarterTests"
-               ReferencedContainer = "container:ReactNativeStarter.xcodeproj">
+               BuildableName = "ItemAlertTests.xctest"
+               BlueprintName = "ItemAlertTests"
+               ReferencedContainer = "container:ItemAlert.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ReactNativeStarter.app"
-            BlueprintName = "ReactNativeStarter"
-            ReferencedContainer = "container:ReactNativeStarter.xcodeproj">
+            BuildableName = "ItemAlert.app"
+            BlueprintName = "ItemAlert"
+            ReferencedContainer = "container:ItemAlert.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ReactNativeStarter.app"
-            BlueprintName = "ReactNativeStarter"
-            ReferencedContainer = "container:ReactNativeStarter.xcodeproj">
+            BuildableName = "ItemAlert.app"
+            BlueprintName = "ItemAlert"
+            ReferencedContainer = "container:ItemAlert.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ReactNativeStarter.app"
-            BlueprintName = "ReactNativeStarter"
-            ReferencedContainer = "container:ReactNativeStarter.xcodeproj">
+            BuildableName = "ItemAlert.app"
+            BlueprintName = "ItemAlert"
+            ReferencedContainer = "container:ItemAlert.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
